package platform.backend.User.User;

public abstract class User {
}
