package platform.backend.Work.Excercise.types;

import jakarta.persistence.*;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import platform.backend.Work.Excercise.Excercise;

@NoArgsConstructor
@Getter
@Setter
@Entity
public class TrueFalseExcercise extends Excercise {
}
